--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>The hex color is: <span class="hexColor"></span></h1>
-    <button class="btnColor">click here to change color</button>
+    <div class="container">
+        <h1>The hex color is: <span class="hexColor"></span></h1>
+        <button class="btnColor">click here to change color</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
